# QQRobot

./: .env.prod.gpg  Dockerfile  bot.py  docker-compose.yml  pyproject.toml  run_test.py
.github/workflows/: build.yml  deploy.yml
src/common_utils/: aliyun.py  database.py  genshin_api.py  interface.py  system.py
src/plugins/adult/: __init__.py  config.py  image.py
src/plugins/chat/: __init__.py  attrs.py  chatter.py  config.py  tagging.py
src/plugins/core/: __init__.py  config.py  core.py
src/plugins/daily_news/: __init__.py  config.py  sixty.py
src/plugins/genshin/: __init__.py  api.py  bind_account.py  fetch_news.py  sign_reward.py
src/plugins/genshin_news/: __init__.py  fetch_news.py
src/plugins/member/: __init__.py  config.py
src/plugins/novelai/: __init__.py  config.py  image.py
src/plugins/openai/: __init__.py  config.py  gpt.py
src/plugins/ping/: __init__.py  ping.py
src/plugins/pixiv/: __init__.py  config.py  pixiv.py
src/plugins/repeat/: __init__.py  config.py  repeat.py
src/plugins/vvhan/: __init__.py  fish.py  sixty.py
src/plugins/what/: __init__.py  what.py
