[tool.poetry]
name = "QQRobot"
version = "0.1.0"
description = "QQRobot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc4"
PyMySQL = "^1.0.2"
httpx = "^0.24.0"
nonebot-adapter-onebot = "^2.1.5"
nonebot-adapter-qqguild = "^0.2.2"
nonebot-plugin-apscheduler = "^0.2.0"
aliyun-python-sdk-core = "^2.13.36"
aliyun-python-sdk-green = "^3.6.5"
aliyun-python-sdk-green-extension = "^1.0.0"
aliyun-python-sdk-alinlp = "^1.0.18"
alibabacloud-tea-openapi = "^0.3.7"
alibabacloud-ocr-api20210707 = "^1.1.13"
Pillow = "^9.2.0"
beautifulsoup4 = "^4.12.2"
aliyun-python-sdk-alimt = "^3.2.0"

[tool.poetry.dev-dependencies]
nb-cli = "^1.1.2"

[tool.nonebot]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
